# tarmac_test

./: .coverage  .gitignore  README.md  agoa.ipynb  conftest.py  manage.py  mypy.ini  package.json  pyproject.toml  pytest.ini  schema.yml
.github/workflows/: ci.yml
agoa/: admin.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
agoa/fixtures/: initial_data.json
agoa/migrations/: 0001_initial.py  0002_airport_latitude_airport_longitude.py
authentication/: serializers.py  tests.py  urls.py  views.py
frontend/: package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts
frontend/src/components/: Auth.css  Dashboard.css  Dashboard.tsx  Login.tsx  Map.css  Map.tsx  Register.tsx
